--- a/sci_act_2019/website/scheduler/static/css/sci_act.css
+++ b/sci_act_2019/website/scheduler/static/css/sci_act.css
@@ -49,4 +49,8 @@ body {
 
 h1, h2, h3, h4, h5, h6, .navbar-brand {
     font-family: 'Fjalla One', sans-serif !important;
+}
+
+h1, h2, h3, .navbar-brand {
     text-transform: uppercase;
+}
